[package]
name = "broadcast-tmc"
version = "0.1.0"
authors = ["George Hopkins <george-hopkins@null.net>"]
edition = "2018"
license = "MIT"
categories = ["data-structures", "parser-implementations"]
keywords = ["alert-c", "location", "rds", "tisa", "tmc"]

[dependencies]
encoding_rs = "0.8.28"
log = "0.4.14"

[dev-dependencies]
pretty_env_logger = "0.4.0"
